melhorias e bugs visuais corrigidos

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "feriasjeri_app",
-    "short_name": "feriasjeri_app",
-    "start_url": ".",
+    "name": "Férias Jeri",
+    "short_name": "Férias Jeri",
+    "start_url": "/",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Aplicativo oficial da Férias Jeri.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
