--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,97 +1,44 @@
 name: feriasjeri_app
-description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
+description: "Férias Jeri"
+publish_to: "https://feriasjeri.web.app/"
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+1 # Versão do app no formato major.minor.patch+build_number
 
 environment:
-  sdk: ^3.5.4
+  sdk: ">=3.5.4 <4.0.0" # Define o intervalo de versões suportadas do Dart SDK
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
+  # Flutter SDK
   flutter:
     sdk: flutter
-  flutter_localizations:
+  flutter_localizations: # Para suporte à localização (ex.: traduções)
     sdk: flutter
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  flutter_login: ^5.0.0
-  firebase_core: ^3.8.0
-  firebase_auth: ^5.3.3
-  cloud_firestore: ^5.5.0
-  modal_bottom_sheet: ^3.0.0
-  calendar_date_picker2: ^1.1.7
-  intl: ^0.19.0
-  provider: ^6.1.2
+
+  # Ícones e UI
+  cupertino_icons: ^1.0.8 # Ícones padrão para apps Cupertino (estilo iOS)
+  flutter_login: ^5.0.0 # Biblioteca para telas de login
+
+  # Firebase
+  firebase_core: ^3.8.0 # Integração com o Firebase
+  firebase_auth: ^5.3.3 # Autenticação do Firebase
+  cloud_firestore: ^5.5.0 # Banco de dados Firestore
+
+  # Gerenciamento de estado e UI
+  provider: ^6.1.2 # Gerenciamento de estado baseado em InheritedWidget
+  modal_bottom_sheet: ^3.0.0 # Modal customizável para bottom sheets
+  calendar_date_picker2: ^1.1.7 # Picker de datas personalizável
+
+  # Internacionalização e formatação
+  intl: ^0.19.0 # Para formatação de datas, números e strings localizadas
 
 dev_dependencies:
+  # Testes e lint
   flutter_test:
-    sdk: flutter
+    sdk: flutter # Ferramentas para testes unitários e de integração
+  flutter_lints: ^4.0.0 # Regras padrão de lint para projetos Flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^4.0.0
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
-  uses-material-design: true
+  uses-material-design: true # Ativa o uso de ícones Material Design
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  assets:
+    - assets/images/background.jpg # Adiciona imagem usada no projeto
