--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
 
   # Internacionalização e formatação
   intl: ^0.19.0 # Para formatação de datas, números e strings localizadas
+  get: ^4.6.6
+  animations: ^2.0.11
 
 dev_dependencies:
   # Testes e lint
