--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   intl: ^0.19.0 # Para formatação de datas, números e strings localizadas
   get: ^4.6.6
   animations: ^2.0.11
+  flutter_advanced_drawer: ^1.3.7
 
 dev_dependencies:
   # Testes e lint
