--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.6
   animations: ^2.0.11
   flutter_advanced_drawer: ^1.3.7
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   # Testes e lint
@@ -50,3 +51,4 @@ flutter:
 
   assets:
     - assets/images/background.jpg # Adiciona imagem usada no projeto
+    - assets/.env # ENV do projeto
