--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   # Flutter SDK
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
   flutter_localizations: # Para suporte à localização (ex.: traduções)
     sdk: flutter
 
@@ -39,6 +41,8 @@ dependencies:
   animations: ^2.0.11
   flutter_advanced_drawer: ^1.3.7
   flutter_dotenv: ^5.2.1
+  printing: ^5.14.0
+  easy_mask: ^2.0.1
 
 dev_dependencies:
   # Testes e lint
